--- a/app/assets/styles/modules/_quote-form.css
+++ b/app/assets/styles/modules/_quote-form.css
@@ -19,13 +19,14 @@
     }
 
     &__submit{
-        padding: 12px 30px;
+        padding: 14px 36px;
         border-radius: 60px;
         color: #ffffff;
         border: none;
         background: #FB5A1E;
         cursor: pointer;
         margin: 7px 0;
+        font-size: 1.4rem;
 
         &:focus{
             outline: none;
@@ -34,14 +35,14 @@
 
     &__header{
         background: linear-gradient(180deg, #FA8407 23.8%, #FB5A1E 100%); 
-        padding: 32px 37px;
+        padding: 45px 37px;
         display: flex;
         justify-content: center;
         align-items: center;
 
         &-img{
             margin-right: 30px;
-            width: 42px;
+            width: 50px;
         }
     }
 
@@ -51,7 +52,7 @@
 
 
     &__input{
-        padding: 14px 0px;
+        padding: 20px 0px;
         resize: none;
         border: none;
         border-bottom: 1px solid #979797;
@@ -69,7 +70,7 @@
         &:focus~.quote-form__label{
             display: block;
             font-weight: 400;
-            font-size: 1rem;
+            font-size: 1.4rem;
             color: #FB5A1E;
             top: -8px;
         }
@@ -81,7 +82,7 @@
     }
 
     &__title{
-        font-size: 1.2rem;
+        font-size: 1.6rem;
         color: #ffffff;
         font-weight: 300;
         line-height: normal;
@@ -109,7 +110,19 @@
 
 }
 
-
+@media only screen and (max-width: 1300px){
+    .quote-form__title {
+        font-size: 1.2rem;
+    }
+}
+@media only screen and (max-width: 1080px){
+    .quote-form__inputs-container {
+        padding: 40px 34px;
+    }
+    .quote-form__header {
+        padding: 32px 37px;
+    } 
+}
 
 @media only screen and (max-width: 640px){
     .quote-form__inputs-container {
@@ -120,9 +133,10 @@
         margin-bottom: 45px;
     }
 }
-
-@media only screen and (max-width: 1080px){
-    .quote-form__inputs-container {
-        padding: 40px 34px;
+@media only screen and (max-width: 425px){
+    .quote-form__header-img {
+        width: 36px;
     }
 }
+
+
