--- a/app/assets/styles/modules/_contact.css
+++ b/app/assets/styles/modules/_contact.css
@@ -34,6 +34,28 @@
         box-shadow: 0px 4px 23px rgba(0, 0, 0, 0.2);
         width: 93%;
     }
+    &__overlay {
+        position: absolute;
+        height: 100%;
+        background:  linear-gradient(0deg, rgba(51, 51, 51, 0.5), rgba(51, 51, 51, 0.5));
+        width: 100%;
+        top: 0;
+        pointer-events: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        & h2 {
+            font-family: Sofia Pro;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 2.2rem;
+            line-height: 350px;
+            letter-spacing: 0.02em;            
+            color: #FFFFFF; 
+            text-align:center;
+            transform:translateY(-15%)           
+        }
+    }
 
     &__bg{
         height: 400px;
@@ -166,9 +188,7 @@
     .contact__left-container, .contact__right-container{
         width: 100%;
     }
-    .contact__right-container{
-        margin-top: 250px;
-    }
+    
     .contact__left-container {
         padding-right: 0%;
     }
