--- a/app/assets/styles/modules/_nav-bar.css
+++ b/app/assets/styles/modules/_nav-bar.css
@@ -1,6 +1,5 @@
 .nav-bar{
     height: 70px;
-    background: transparent;
     width: 100%;
     z-index: 99;
     transition: all .3s ease-in-out;
@@ -24,10 +23,18 @@
     }
 
     &__container{
-        height: 100%;
+        height: 100%; 
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+    
+    }
+
+    &--port {
+        background: red;
+        height: 40px;
+        width: 100%;
     }
 
     &__logo-link{
@@ -116,6 +123,9 @@
         width: 50px;
     }
 }
+header > .nav-bar .new-bar{
+    background-color: red;
+}
 
 @media only screen and (min-width: 740px){
     .nav-bar__link:link, .nav-bar__link:visited{
@@ -126,7 +136,7 @@
         font-size: 1rem;
         margin: 0 30px;
         text-decoration: none;
-        font-weight: 500;
+        font-weight: 100;
         white-space: nowrap;
         vertical-align: center;
         transition: all .3s;
