--- a/app/assets/styles/modules/_quote.css
+++ b/app/assets/styles/modules/_quote.css
@@ -12,6 +12,7 @@
     &__left-container{
         width: 49%;
         padding-right: 12%;
+        padding-top: 12%;
     }
 
     &__list-container{
@@ -48,15 +49,16 @@
     &__title{
         font-weight: 500;
         color: #333333;
-        font-size: 3rem;
-        padding-bottom: 50px;
+        font-size: 4rem;
+        padding-bottom: 60px;
         padding-right: 20px;
     }
 
     &__sub-title{
         font-weight: 500;
-        font-size: 1.4rem;
+        font-size: 1.8rem;
         padding-bottom: 15px;
+        color: #000000;
         span{
             font-weight: 300;
         }
@@ -64,9 +66,9 @@
 
     &__text{
         font-weight: 300;
-        font-size: 0.9rem;
+        font-size: 1.2rem;
         color: #000000;
-        line-height: 30px;
+        line-height: 36px;
         padding-bottom: 30px;
     }
 
@@ -81,7 +83,7 @@
         padding-top: 30px; 
     }
     .quote__container {
-        transform: translateY(-9%);
+        transform: translateY(-6%);
     }
     .quote__left-container{
         padding-right: 7%;
@@ -94,6 +96,11 @@
 }
 
 
+@media only screen and (max-width: 1300px){
+    .quote__title {
+        font-size: 3rem;
+    }
+}
 @media only screen and (max-width: 700px){
     .quote__container{
         flex-direction: column;
@@ -102,5 +109,11 @@
 
     .quote__title {
         padding-right: 0px;
+    }
+    .quote__text {
+        line-height: 27px;
+    }
+    .quote__title {
+        font-size: 2.5rem;
     }
 }
