--- a/app/assets/styles/modules/_team.css
+++ b/app/assets/styles/modules/_team.css
@@ -44,7 +44,7 @@
             background: #FFFFFF;
             box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
-            padding:60px 30px 40px 60px;
+            padding:60px 50px 40px 80px;
             margin: 30px 0px;
 
             &:before {
@@ -90,7 +90,7 @@
 
     &__visual{
         position: relative;
-        width: 140px;
+        width: 150px;
 
         &::after {
         content: url(../../assets/images/reddot.png);
@@ -110,39 +110,47 @@
         width: 140px;
         position: relative;
         z-index: 10;
+        padding-top: 40px;
 
         & img {
-            width:200%;
+            width:220%;
             
         }
 
         &::before {
             content: url(../../assets/images/oball.png);
             position:absolute;
-            bottom: 10px;
-            left:90%;
+            bottom: -20px;
+            left:150%;
             z-index:-10;
-            width: 20%
+            width: 20%;
+            transform: scale(0.5);
         }
         &::after {
             content: url(../../assets/images/pball.png);
             position:absolute;
-            bottom: 0px;
-            left:-20%;
+            bottom: -68px;
+            left:-40%;
             z-index:-20;
-            width: 40%
+            width: 40%;
+            transform: scale(0.5);
         }
+        
+    }
+    &__dot {
+        position: absolute;
+        bottom: 100px;
+        left: 68%;
+        z-index: -20;
+        width: 40%;
+        transform: scale(0.3);
+
     }
     &__desc {
         padding-left: 60px;
         position: relative;
         width: 70%;
 
-        /* &:nth-of-type(even) {
-            flex-direction: row-reverse;
-            padding-right:60px;
-
-        } */
         & h3 {
         font-family: Sofia Pro;
         font-style: normal;
@@ -156,7 +164,7 @@
             font-family: Sofia Pro;
             font-style: normal;
             font-weight: bold;
-            font-size: 20px;
+            font-size: 22px;
             line-height: 30px;
             letter-spacing: -0.02em;
             color: #333333;
@@ -170,7 +178,7 @@
             line-height: 173.4%;
             letter-spacing: -0.02em;
             color: #000000;   
-            padding-top: 20px;         
+            /* padding-top: 20px;          */
             
         }
     }
@@ -185,9 +193,10 @@
     }
     &__img-bg{
         position: absolute;
-        top: -10%;
+        top: 0%;
         left: 0%;
-        width: 60%;
+        width: 32%;
+        height: 71%;
         z-index: -1;
 
         &-top {
@@ -199,121 +208,9 @@
         }
     }
 
-    /* &__item{
-        width: 20.1%;
-        text-align: center;
-        position: relative;
-        border-radius: 50%;
-        padding-bottom: 79px;
 
-        & > div {
-            display: flex;
-            flex-direction:column;
-            align-items:center;
-            justify-content:center;
-        }
-
-        span{
-            font-weight: 300;
-            font-size: 1.2rem;
-            color: #000000;
-        }
-
-        img{
-            width: 100%;
-            cursor: pointer;
-            filter: grayscale(100%);
-            transition: all .3s ease-in;
-        }
-    }
-
-    &__avatar-wrapper{
-        width: 154%;
-        height: 280px;
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-
-        & img {
-            height: 132%;
-        }
-
-        img:hover{
-            transform: scale(1.1);
-            filter: grayscale(0%);
-        }
-    }
-
-    &__container__main{
-        display: flex;
-        justify-content: space-between;
-        align-items: flex-start;
-        flex-wrap: wrap;
-
-        
-    }
-
-    .title{
-        padding-bottom: 20px;
-
-        
-
-        &__sub{
-            font-size: 1.4rem;
-            font-weight: 400;
-            padding-bottom: 55px;
-            text-align: right;
-            position: relative;
-
-            &--left{
-                text-align: left;
-            }
-
-            &::before{
-                content: "";
-                display: inline-block;
-                vertical-align: middle;
-                height: 2px;
-                width: 50px;
-                background: #FB5A1E;
-                margin-bottom: 1px;
-            }
-        }
-
-        &__second{
-            font-family: Roboto;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 22px;
-            line-height: 240.5%;
-            letter-spacing: -0.02em;
-            color: #000000;            
-        }
-        
-    }
-
-    &__label {
-            white-space: nowrap;
-        & span {
-            font-family: Sofia Pro;
-            font-style: normal;
-            font-weight: 300;
-            font-size: 18px;
-            line-height: 102.5%;
-            letter-spacing: -0.02em;    
-            color: #000000;        
-        }
-    }    */
     
-    
-    &__img-bg{
-            position: absolute;
-            top: 3%;
-            left: 0%;
-            width: 42%;
-            height: 70%;
-            z-index: -1;
-        }
+   
     
         &__item{
             width: 20.1%;
@@ -452,9 +349,7 @@
     .team__ppic {
         width: 124px;
     }
-    .team__ppic::before {
-        left:70%;
-    }
+   
 }
 @media only screen and (max-width: 840px){
     .team__item {
@@ -508,18 +403,7 @@
     }
 
 }
-/* @media only screen and (max-width: 740px){
-    .team__item{
-        width: 37%;
-        padding-bottom: 30px;
-    }
-    .team__img-bg {
-        display: none;
-    }
-    .team .title {
-        padding-bottom: 0px;
-    }
-} */
+
 
 @media only screen and (max-width: 740px){
     .team__item{
@@ -580,9 +464,7 @@
     .team__ppic{
         width: 112px;
     }
-    .team__ppic::before {
-        left: 54%;
-    }
+    
     
 }
 @media only screen and (max-width: 440px){
@@ -611,6 +493,17 @@
     .xpad {
         padding-left: 50px;
         padding-bottom: 9px;
+    }
+    .team__ppic::before{
+        transform: scale(0.3);
+        left: 167%;
+    }
+    .team__ppic::after{
+        transform: scale(0.3);
+        left: -21%;
+    }
+    .team__desc h4 {
+        font-size: 16px;
     }
     
 }
