--- a/app/assets/styles/modules/_work.css
+++ b/app/assets/styles/modules/_work.css
@@ -44,7 +44,7 @@
             font-style: normal;
             font-weight: 300;
             font-size: 16px;
-            line-height: 36px;
+            line-height: 26px;
             color: #333333; 
             width:65%;
                  
@@ -68,7 +68,7 @@
 
     &__board {
         display: flex;
-        padding: 20px 30px 0px 130px;
+        padding: 20px 20px 0px 110px;
         /* position: relative; */
         
         &:nth-of-type(even){
@@ -114,7 +114,8 @@
         
         }
         &:nth-of-type(even) .work__desc p{
-            padding-right: 20px;
+            /* padding-right: 20px; */
+            padding-right: 66px;
         
         }
     }
@@ -133,6 +134,9 @@
     &__desc {
         & p {
             width: 100%;
+        }
+        & h2 {
+            font-size: 2.5rem;
         }
     }
     &__contents{
@@ -173,6 +177,9 @@
         &:nth-child(6) .work__content__title {
             color: #000000;
         }
+    }
+    &__img-bg-top {
+        width: 40%;
     }
 }
 
@@ -231,6 +238,9 @@
         right: 19%;
         top: 32px;
     }
+    .work__board:nth-of-type(even) .work__desc p {
+        padding-right: 10px;
+    }
 }
 
 @media only screen and (max-width: 860px){
@@ -285,6 +295,9 @@
         top: 63px;
         width: 3%;
     }
+    .work__img-bg-top {
+        transform: translateX(50%);
+    } 
 }
 @media only screen and (max-width: 440px){
     .work__title {
