--- a/app/assets/styles/modules/_who.css
+++ b/app/assets/styles/modules/_who.css
@@ -168,6 +168,7 @@
         padding: 30px 70px 40px 140px;
         text-align: left;
         color: #FFFFFF;
+        z-index: -1;
         & h5 {
             font-family: Sofia Pro;
             font-style: italic;
@@ -338,7 +339,7 @@
         box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.12);
         padding: 15px;
         z-index: 50;
-
+        /* animation: scaleIn 4s infinite cubic-bezier(.36, .11, .89, .32); */
 
 
         &:nth-of-type(1) {
@@ -378,9 +379,44 @@
             z-index: -10;
         }
     }
+    &__inner {
+        position: absolute; 
+        background:#FB5A1E;   
+        border-radius: 50%;
+        z-index: -1;
+        opacity: 0.6;
+        transition-delay: -5s;
+       
+        &:nth-child(odd){
+            background:white;
+            opacity: 0.6;
+        }
+
+    }
+    &__circle.who__inner {
+        transform: scale(1.2);
+        transition: all 0.6s ease-in;
+        border: 2px solid white;
+         
+        &:nth-child(odd){
+            border: 0.5px solid #fb5a1e;
+        }
+        & h3 {
+            transform: scale(1.1);
+        }
+    }
 }
 
-
+@keyframes scaleIn {
+    from {
+      transform: scale(.7, .7);
+      opacity: .5;
+    }
+    to {
+      transform: scale(.6, .6);
+      opacity: .6;
+    }
+  }
 
 @media only screen and (max-width:1200px){
     .who__row {
