--- a/app/assets/styles/modules/_diff.css
+++ b/app/assets/styles/modules/_diff.css
@@ -1,14 +1,14 @@
 .diff {
     position: relative;
-    padding-bottom: 60px;
+    
     &__container {
             display: flex;
             justify-content:space-around;
-            padding:20px 20px 0px 30px;
+            padding:20px 20px 40px 30px;
             position: relative;
             /* margin-bottom:30px */
         & > div {
-            width: 46%;
+            width: 43%;
             & h3 {
                 font-family: Sofia Pro;
                 font-style: normal;
@@ -35,10 +35,15 @@
                 height: 100%;
 
                 &.diff__home-right {
-                    height: 50%;
+                    height: 40%;
                     right:-20%;
                     top:-50px
                 }
+                &.diff__home-left {
+                    height: 100%;
+                    position: relative;
+                }
+
             }
             /* &:nth-of-type(1) img{
                 left: 0px;                
@@ -70,16 +75,14 @@
         }
     
     
-        /* &__title{
-            font-family: Sofia Pro;
+        &__title{
+            /* font-family: Sofia Pro; */
             font-style: normal;
-            font-weight: bold;
-            font-size: 45px;
-            line-height: 55px;
-            color: #FB5A1E;        
+            font-size: 2.7rem
+                   
     
     
-        } */
+        }
     
         &__board {
             display: flex;
@@ -179,6 +182,9 @@
             left: -9%;
             z-index: -1;
         }
+        &__left {
+            height: 400px;
+        }
        &__home{
            &-bottom {
            position: absolute;
@@ -186,7 +192,7 @@
            bottom: 0px;
            left: 0;
            width: 100%;
-           height: 50%;
+           height: 56%;
            background: url(../../../assets/images/diffbg3.png);
            background-size: cover;
            
@@ -224,13 +230,19 @@
 }
 @media only screen and (max-width:1089px){
     .diff__container > div h3  {
-        font-size: 26px;
+        font-size: 22px;
     }
     .diff__container > div p  {
-        font-size: 17px;
+        font-size: 16px;
     }
     .diff__container > div img  {
         height: 80%;
+    }
+    .diff__left {
+        height: 340px;
+    }
+    .diff__container {
+        padding-left: 0px;
     }
 }
 @media only screen and (max-width:956px){
@@ -259,12 +271,15 @@
         font-size: 23px;
     }
     .diff__container > div p  {
-        font-size: 17px;
+        font-size: 15px;
+    }
+    .diff__left {
+        height: 300px;
     }
 }
 @media only screen and (max-width:823px){
     .diff__container {
-        padding: 15px 0px 60px 0px;
+        padding: 15px 0px 0px 0px;
         
     }
     .diff__container > div h3  {
@@ -274,9 +289,9 @@
 }
 @media only screen and (max-width:768px){
     .diff__container {
-        padding: 15px 0px 20px 60px;
+        padding: 15px 0px 20px 0px;
         flex-direction: column;
-        
+        align-items: center;
     }
     /* .diff__button {
         margin-left: 56px;
@@ -302,7 +317,12 @@
     .diff__board:nth-of-type(odd) .diff__desc {
         padding-right: 0px;
     }
-    
+    .diff__container>div.diff__left {
+        width: auto;
+    }
+    .diff__home-bottom {
+        bottom:-50px ;
+    }
 }
 @media only screen and (max-width:512px){
     .diff__container > div h3  {
@@ -325,7 +345,7 @@
 
 @media only screen and (max-width: 425px){
     .diff__container {
-        padding: 15px 0px 60px 30px;
+        padding: 15px 0px 0px 0px;
     }
     .diff__container > div img {
         height: 27%;
@@ -350,13 +370,16 @@
         font-size: 17px;
         line-height: 27px;
     }
+    .diff__left{
+        height: 250px;
+    }
 }
 @media only screen and (max-width: 350px){
     .diff__container > div h3  {
         font-size: 17px;
     }
     .diff__container {
-        padding: 15px 0px 60px 20px;
+        padding: 15px 0px 0px 0px;
     }
     .diff__visual:nth-of-type(odd) {
         height: 237px;
