--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -183,13 +183,13 @@
     &__design{
         width: 6rem;
         vertical-align: bottom;
-        transform: translateY(-1px);
+        transform: translateY(-11px);
     }
 
     &__development{
         width: 12.8rem;
         vertical-align: bottom;
-        transform: translateY(-2px);
+        transform: translateY(-11px);
     }
 
    
@@ -215,7 +215,7 @@
 @media only screen and (min-width: 600px){
     .header__design{
         width: 9.5rem;
-        transform: translateY(-1.4px);
+        transform: translateY(-5.2px);
     }
     .header__development{
         width: 17rem;
@@ -244,9 +244,42 @@
         line-height: 35px;
     }
 }
+@media only screen and (max-width: 1390px){
+    .header__map{
+        height: 90%;
+    }
+}
+@media only screen and (max-width: 1290px){
+    .header__map{
+        height: 80%;
+    }
+}
+@media only screen and (max-width: 1130px){
+    .header__map{
+        height: 70%;
+    }
+}
+@media only screen and (max-width: 425px){
+    .header__title--sub{
+        font-size: 1.8rem;
+    }
+    .header__text {
+        font-size: 1.1rem;
+    }
+}
 @media only screen and (max-width: 375px){
     .header__text{
         font-size: 1.0rem;
+    }
+    .header__development {
+        width: 10.8rem;
+    }
+    .header__design {
+        width: 5rem;
+        transform: translateY(-14px);
+    }
+    .header__title--sub {
+        font-size: 1.7rem;
     }
 }
 
