--- a/app/assets/styles/global/_global.css
+++ b/app/assets/styles/global/_global.css
@@ -13,7 +13,9 @@ html {
     font-family: "Sofia Pro";
     /* font-family: "Montserrat", sans-serif; */
 }
-
+a {
+    text-decoration: none;
+}
 body.fixed{
     height: 100vh;
     overflow: hidden;
