--- a/app/assets/styles/modules/_teem.css
+++ b/app/assets/styles/modules/_teem.css
@@ -2,136 +2,163 @@
     position: relative;
     padding: 40px 0;
 
-    
+    &.xpad {
+        padding: 40px;
+    }
 
     &__row {
         padding: 40px 80px;
     }
 
-    &__overlay {
-        position: absolute;
-        width: 100%;
-        height: 0%;
-        background: rgba(0, 0, 0, 0.6);
-        top: 0;
-        left: 0;
-        border-radius: 30px;
-        z-index: 11;
-
-        &--show {
-            height: 100%;
-            transition : height 0.2s ease-out;
-            text-align:center
-        }
-        & p {
-            opacity: 0;
-            /* line-height: 30vh; */
-            color: white;
-            font-size:1.4rem;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-        
-    }
+    
 
     &__board {
         display: flex;
         justify-content:space-between;
-        padding: 30px 60px ;
-        width:30%;
-        border: 1px solid #FB5A1E;
-        box-sizing: border-box;
-        border-radius: 30px;
-        margin: 40px 0px 20px 0px;
-        position: relative;
-        cursor: pointer;
+        padding: 30px 30px 30px 100px ;
+        width:100%;
 
+       
 
-
-        &:hover {
-            
-            animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-            transform: translate3d(0, 0, 0);
-            backface-visibility: hidden;
-            perspective: 1000px;
-              
+        & > div:first-child {
+            width: 280px;
+            position:relative;
         }
+        &:nth-child(first-child) {
+            width: 40%;
+        }
+
+        &:not(:nth-of-type(1))::before {
+            content: " ";
+            width: 50%;
+            height: 1px;
+            background: rgba(251, 90, 30, 0.1);
+            border-radius: 4px;
+            position: absolute;
+            margin: -40px auto;
+            transform: translateX(-25%);
+            
+            
+        }
+        &.mgt {
+            background: #FFFFFF;
+            box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            padding:60px 50px 40px 80px;
+            margin: 30px 0px;
+
+            &:before {
+                content: " ";
+                width: 0;
+                height: 0;
+                background: white;
+            }
+        }
+        &:nth-of-type(even) {
+            flex-direction: row-reverse;
+            padding: 30px 30px 30px 40px ;
+
+            & > div .team__links {
+                display: flex;
+                align-items:flex-end;
+                justify-content:flex-end;
+                right:20px;
+                
+                & img {
+                padding-right:0px;
+                padding-left:10px;
+                }
+            }
+
+        }
+        &.mgt:nth-of-type(even) {
+            flex-direction: row;
+            padding: 60px 30px 40px 60px;
+
+
+            & > div .team__links {
+                display: flex;
+                align-items:flex-start;
+                justify-content:flex-start;
+            }
+                
+        }
+        
     }
 
-   &__anim {
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-       width: 100%;
-   }
+   
+
+    &__visual{
+        position: relative;
+        width: 150px;
+
+        &::after {
+        content: url(../../assets/images/reddot.png);
+        position:absolute;
+        bottom: -20px;
+        left:100%;
+        z-index:-20;
+        
+        }
+        & > img.team__im{
+            width: 200%;
+        }
+        
+    }
     
     &__ppic {
-        width: 230px;
+        width: 140px;
         position: relative;
         z-index: 10;
         padding-top: 40px;
 
         & img {
-            width:100%;
+            width:220%;
             
         }
 
         &::before {
             content: url(../../assets/images/oball.png);
             position:absolute;
-            bottom: -44px;
-            left:60%;
+            bottom: -20px;
+            left:150%;
             z-index:-10;
             width: 20%;
-            transform: scale(0.4);
+            transform: scale(0.5);
         }
         &::after {
             content: url(../../assets/images/pball.png);
             position:absolute;
-            bottom: -30px;
-            left:-10%;
+            bottom: -68px;
+            left:-40%;
             z-index:-20;
             width: 40%;
-            transform: scale(0.7);
+            transform: scale(0.5);
         }
         
     }
     &__dot {
         position: absolute;
-        bottom: 86px;
-        left: 30%;
+        bottom: 100px;
+        left: 68%;
         z-index: -20;
         width: 40%;
         transform: scale(0.3);
 
     }
     &__desc {
-        
-        padding-top: 14px;
-       
+        padding-left: 60px;
+        position: relative;
+        width: 70%;
 
         & h3 {
         font-family: Sofia Pro;
         font-style: normal;
         font-weight: bold;
-        font-size: 26px;
-        line-height: 40px;
+        font-size: 42px;
+        line-height: 60px;
         letter-spacing: -0.02em;
         color: #FB5A1E;
-        white-space:nowrap;
-            
-            &.team__hero {
-                font-size: 36px;
-                font-weight: 600;
-
-                &:after {
-                    content: url(../../assets/images/modalmap.png);
-                    vertical-align:middle
-                }
-            }
-
         }
         & h4 {
             font-family: Sofia Pro;
@@ -151,13 +178,13 @@
             line-height: 173.4%;
             letter-spacing: -0.02em;
             color: #000000;   
-            padding-top: 30px;         
+            /* padding-top: 20px;          */
             
         }
     }
 
     &__links {
-        padding-top: 20px;
+        margin-top: 30px;
 
         & img {
             height: 20px;
@@ -221,7 +248,6 @@
             justify-content: space-between;
             align-items: flex-start;
             flex-wrap: wrap;
-            /* padding: 40px 0px; */
         }
     
         .title{
@@ -257,61 +283,15 @@
                 color: #000000;
             }
         }
-        &__modal {
-            width: 100%;
-            height: 100vh;
-            position: fixed;
-            top: 0;
-            left: 0;
-            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.4));
-            z-index: 100;
-            margin: 0 auto;
-            opacity: 0;
-            visibility: hidden;
-            transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
-            
-
-
-            &--show {
-                display: flex;
-                align-items:center;
-                opacity: 1;
-                visibility: visible;
-                transform: scale(1.0);
-                transition: visibility 0s linear 0s, opacity 0.8s 0s, transform 0.25s;
-               
-
-            }
-        }
-        &__content {
-            width: 80%;
-            background: #fff;
-            border: 1px solid #FB5A1E;
-            padding: 100px;
-            height: 90vh;
-            margin: 0 auto;
-            overflow-y: auto;
-            
-        }
         
 
 }
 
+.xpad {
+    padding-left: 100px;
+    padding-bottom: 30px;
+}
 
-@keyframes shake {
-   
-    
-    
-  
-    30%, 50%, 70% {
-      transform: translate3d(0px, 0, 0);
-    }
-  
-    40%, 60% {
-      transform: translate3d(2px, 0, 0);
-    }
-  }
-  
 
 
 @media only screen and (min-width: 1400px){
