--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -67,6 +67,7 @@
 
     &--gradient{
         background: linear-gradient(180deg, #FA8209 0%, #FF4B30 82.24%);
+        font-size: 0.9rem;
     }
 
     &--link:link, &--link:visited{
