--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -107,12 +107,12 @@
         line-height: normal;
         margin: 0.2em 0;
         &--sub {
-            font-family: Roboto;
+            font-family: 'Playfair Display';
             font-style: normal;
             font-weight: bold;
             font-size: 2.4rem;
             line-height: 50px;
-            letter-spacing: -0.05em;
+            letter-spacing: -0.02em;
             color: #FFFFFF;            
         }
 
@@ -134,9 +134,9 @@
         font-size: 1.3rem;
         color: #ffffff;
         font-family: 'Sofia Pro', serif;
-        font-weight: 500;
+        font-weight: 100;
         line-height: 28px;
-
+        opacity: 0.8;
 
         &--services{
             text-align: center;
@@ -183,7 +183,7 @@
     &__design{
         width: 6rem;
         vertical-align: bottom;
-        transform: translateY(-11px);
+        
     }
 
     &__development{
