--- a/app/assets/styles/modules/_contact-form.css
+++ b/app/assets/styles/modules/_contact-form.css
@@ -64,3 +64,9 @@
     }
 
 }
+
+@media only screen and (max-width:700px){
+    .contact-form__inner-container {
+        padding-bottom: 40px;
+    }
+}
