--- a/app/assets/styles/modules/_about.css
+++ b/app/assets/styles/modules/_about.css
@@ -28,13 +28,14 @@
         &--custom{
             padding: 120px 0px 0px 0;
             width: inherit;
+            margin:0 auto;
         }
     }
 
     &__img-one{
         float: right;
-        width: 80%;
-        right: 0%;
+        width: 75%;
+        right: -5%;
         position: relative;
         z-index: 5;
         bottom: 0;
