--- a/app/assets/styles/modules/_footer.css
+++ b/app/assets/styles/modules/_footer.css
@@ -97,9 +97,9 @@
         padding: 34px 0 20px 0;
 
         &__lower{
-            font-size: .8rem;
+            font-size: 1rem;
             color: rgba(0,0,0,.63);
-            transform: translateY(4px);
+            /* transform: translateY(4px); */
             padding-left: 10px;
         }
 
@@ -172,7 +172,7 @@
                 display: inline-block;
                 height: 10%;
                 vertical-align: middle;
-                margin-right: 14px;
+                margin-right: 4px;
                 
             }
         }
@@ -197,7 +197,7 @@
     &__link:link, &__link:visited{
         text-decoration: none;
         color: #000;
-        font-size: .7rem;
+        font-size: .9rem;
         /* margin-right: 20px; */
         display: inline-flex;
         white-space: nowrap;
@@ -257,7 +257,7 @@
             width: 27px;
             background: black;
             margin-left: 35px;
-            margin-top: 11px;
+            margin-top: 6px;
             background: url(../../assets/images/mail.png);
             background-repeat: no-repeat;
             background-size: contain;
@@ -398,16 +398,38 @@
     .footer__input-container::before {
         height: 22px;
         width: 27px;
-        margin-left: 15px;
+        margin-left: 10px;
+    }
+    .footer__submit {
+        width: 130px;
+    }
+    .footer__input {
+        padding-left: 7px;
     }
 
 } 
 
+@media only screen and (max-width: 425px){
+    .footer__link:link.xpad {
+        padding-left:4px
+    }
+    .footer__input {
+        width: 80%;
+        font-size: 0.7rem;
+    }
+}
 @media only screen and (max-width: 370px){
     .footer__quote {
         width: 90%;
         right: 5%;
         transform: translateX(0%);
+    }
+    .footer__input {
+        width: 100%;
+        font-size: 0.6rem;
+    }
+    .footer__input-container::before {
+        margin-left: 0px;
     }
 }
 
