--- a/app/assets/styles/modules/_testimonials.css
+++ b/app/assets/styles/modules/_testimonials.css
@@ -24,7 +24,7 @@
         width: 40px;
         background: white;
         position: absolute;
-        z-index: 77;
+        z-index: 70;
         transform: translateY(-50%);
         cursor: pointer;
         top: 50%;
@@ -57,6 +57,7 @@
         position: absolute;
         top: 8px;
         left: 73px;
+        background:rgba(251, 90, 30, 0.0)
     }
 
     &__body{
@@ -71,8 +72,8 @@
             display: block;
             position: absolute;
             width: 100%;
-            height: 162%;
-            top: -18%;
+            height: 128%;
+            top: -6%;
             background: url(../../assets/images/map-opaque.png);
             background-size: contain;
             background-position: center;
