--- a/app/assets/styles/modules/_brands.css
+++ b/app/assets/styles/modules/_brands.css
@@ -29,7 +29,7 @@
     }
 
     &__img{
-        filter: grayscale(100%) brightness(124%) opacity(62%);
+        /* filter: grayscale(100%) brightness(124%) opacity(62%); */
         transition: all .5s;
 
         &--colored{
@@ -38,15 +38,15 @@
     }
 
     &__img:hover{
-        filter: grayscale(0%) brightness(100%) opacity(100%);
+        /* filter: grayscale(0%) brightness(100%) opacity(100%); */
     }
 
 }
 
 @media only screen and (max-width: 840px){
     .brands__img:nth-child(1){
-        width: 18%;
-        margin: 16px 22% 5% 0;
+        /* width: 18%; */
+        margin: 16px 0% 5% 0;
     }
     .brands__img:nth-child(2){
         width: 12%;
