--- a/app/assets/styles/modules/_contact.css
+++ b/app/assets/styles/modules/_contact.css
@@ -4,7 +4,7 @@
         display: flex;
         justify-content: center;
         align-items: flex-start;
-        padding: 60px 0;
+        padding: 0px 0;
     }
 
 
@@ -12,27 +12,51 @@
         font-weight: 300;
         font-size: 1.2rem;
         margin: 30px 0;
+        color: #000000;
         
     }
-
-    &__left-container{
+    &__spot {
+        position: absolute;
+        top: 0;
+        left: 0;
+        & img {
+            width: 60%;
+        }
+    }
+    &__map--bg {
+        position: absolute;
+        top: 25%;
+        left: 25%;
+    }
+    &__left{
+        &-container{
         width: 50%;
-        padding-right: 8%;
+        /* padding-right: 8%; */
         height: 60vh;
+        padding: 60px 5% 60px 60px;
+        position: relative;
+        }
+        &-inner {
+            position: relative;
+        }
     }
 
     &__right-container{
         width: 50%;
         position: relative;
+        background: #FFF7F5;
+        padding: 60px 40px;
+
     }
 
     &__map{
         border-radius: 20px;
-        overflow: hidden;
+        /* overflow: hidden; */
         height: 400px;
         margin-top: 7%;
         box-shadow: 0px 4px 23px rgba(0, 0, 0, 0.2);
         width: 93%;
+        position: relative;
     }
     &__overlay {
         position: absolute;
@@ -63,9 +87,9 @@
         background: linear-gradient(180deg, #FB5A1E -4.82%, #FA8407 100%);
         border-radius: 20px;
         position: absolute;
-        right: 0;
-        top: 0;
-        z-index: -1;
+        right: -20px;
+        top: -20px;
+        z-index: 0;
     }
 
     iframe {
