--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -46,7 +46,7 @@
 
         &--contact{
             height: 60vh;
-            background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../../assets/images/contact-bg.jpg);
+            background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../../assets/images/contact-bg2.jpg);
             background-position: bottom right;
             background-size: cover;
             background-repeat: no-repeat;
@@ -136,7 +136,7 @@
         font-family: 'Sofia Pro', serif;
         font-weight: 100;
         line-height: 28px;
-        opacity: 0.8;
+        /* opacity: 0.8; */
 
         &--services{
             text-align: center;
@@ -182,7 +182,7 @@
 
     &__design{
         width: 6rem;
-        vertical-align: bottom;
+        vertical-align: sub;
         
     }
 
@@ -215,7 +215,7 @@
 @media only screen and (min-width: 600px){
     .header__design{
         width: 9.5rem;
-        transform: translateY(-5.2px);
+        /* transform: translateY(-5.2px); */
     }
     .header__development{
         width: 17rem;
@@ -264,7 +264,7 @@
 }
 @media only screen and (max-width:600px){
     .header__development {
-    vertical-align: sub;
+    /* vertical-align: sub; */
     }
     .header__design {
     width: 7rem;
@@ -300,10 +300,13 @@
     }
     .header__development {
         width: 10rem;
+        transform: translate(0);
+        vertical-align: middle;
+
     }
     .header__design {
         width: 5rem;
-        /* transform: translateY(-14px); */
+        vertical-align: middle;
     }
     .header__title--sub {
         font-size: 1.5rem;
