--- a/app/assets/styles/modules/_mobile-nav.css
+++ b/app/assets/styles/modules/_mobile-nav.css
@@ -52,16 +52,28 @@
         line-height: normal;
     }
 
+    &__title--small:link.mobile__list-dot:before {
+        content: '';
+        vertical-align: middle;
+        margin-right: 15px;
+        background-size: cover;
+        width: 7px;
+        height: 7px;
+        border-radius: 50%;
+        background: red;
+    }
+
     &__title--small:link, &__title--small:visited{
         font-size: 1.2rem;
         font-weight: 400;
-        margin-left: 79px;
+        margin-left: 30px;
         display: inline-flex;
         align-items: center;
 
         .mobile-nav__social-img--space{
             margin-right: 15px;
         }
+        
     }
 
     &--open{
@@ -82,10 +94,13 @@
     &__list-item{
         display: flex;
         justify-content: flex-start;
-        align-items: flex-start;
+        align-items:center;
         border-bottom: 1px solid #FB5A1E;
         padding: 14px 0 18px 0;
         margin-bottom: 1.8%;
+
+        
+        
 
         &--header{
             margin-bottom: 12px;
@@ -106,6 +121,9 @@
         &--small{
             border-bottom: none;
             padding: 10px 0 14px 0;
+            /* margin-left:30px; */
+
+            
         }
 
         &--adjusted .mobile-nav__title--small:link, .mobile-nav__title--small:visited{
@@ -189,6 +207,7 @@
         flex-wrap: wrap; 
         justify-content:space-between; 
         width: 62%;
+        margin-left: 30px;
 
         & .mobile-nav__title--small:link {
             margin-right:40px;
@@ -201,9 +220,14 @@
             }
 
             &::before {
-                content: url(../../../assets/images/portbullets.png);
+                content: '';
                 vertical-align: middle;
-                padding-right: 20px;
+                margin-right: 15px;
+                background-size: cover;
+                width: 7px;
+                height: 7px;
+                border-radius: 50%;
+                background: red;
             }
         }
         & .mobile-nav__title--small:visited {
