--- a/app/assets/styles/modules/_services.css
+++ b/app/assets/styles/modules/_services.css
@@ -119,7 +119,7 @@
 
 
         &__text{
-            width: 50%;
+            width: 68%;
             padding-left: 5%;
             display: flex;
             justify-content: flex-start;
@@ -127,7 +127,7 @@
 
             &--space-removed{
                 padding-left: 0;
-                padding-right: 8%;
+                padding-right: 3%;
             }
         }
     }
@@ -155,8 +155,8 @@
             position: absolute;
             top: 50%;
             right: 0%;
-            transform: translate(0%, -50%);
-            box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.25);
+            transform: translate(3%, -50%);
+            /* box-shadow: 0px 4px 84px rgba(0, 0, 0, 0.25); */
             width: 82%;
 
             &--left{
@@ -169,6 +169,9 @@
                 transform: translate(0%, -50%);
                 right: 0%;
             }
+        }
+        &--resize{
+            width: 60%;
         }
     }
 
@@ -191,7 +194,7 @@
     }
 
     &__call-image{
-        width: 75%;
+        width: 100%;
     }
 
 }
