--- a/app/assets/styles/modules/_testimonials.css
+++ b/app/assets/styles/modules/_testimonials.css
@@ -144,7 +144,7 @@
     }
 
     &__pic{
-        width: 71%;
+        width: 100%;
         box-shadow: 0px 4px 48px rgba(0, 0, 0, 0.49);
         border-radius: 28px;
         transform: translateX(50%);
@@ -167,10 +167,10 @@
 
 @media only screen and (min-width: 700px){
     .testimonials__container-first{
-        width: 36%;
+        width: 39%;
     }
     .testimonials__container-second{
-        width: 64%;
+        width: 76%;
     }
     .testimonials__body{
         margin-right: 15%;
@@ -193,12 +193,12 @@
         margin-top: 0%;
     }
     .testimonials__container-second{
-        padding: 92px 10%;
+        padding: 57px 10%;
     }
     .testimonials__body{
         margin-right: 1%;
         margin-top: 0%;
-        padding: 0 1%;
+        padding-left: 3%;
     }
     .testimonials__trigger{
         width: 40px;
@@ -220,5 +220,10 @@
     }
     .testimonials .testimonials__img--resp{
         width: 32%;
+    }
+}
+@media only screen and (max-width: 800px){
+    .testimonials__body-text {
+        line-height: 25px;
     }
 }
