--- a/app/assets/styles/modules/_diff.css
+++ b/app/assets/styles/modules/_diff.css
@@ -1,4 +1,5 @@
 .diff {
+    padding-top: 20px;
     position: relative;
     
     &__container {
@@ -350,9 +351,7 @@
     .diff__container > div img {
         height: 27%;
     }
-    .diff__container > div p {
-        font-size: 13px;
-    }
+    
     .diff__visual {
         height: 260px;
     }
