--- a/app/assets/styles/modules/_nav-bar.css
+++ b/app/assets/styles/modules/_nav-bar.css
@@ -151,8 +151,8 @@ header > .nav-bar .new-bar{
 
     
     .nav-bar__link--bg:link, .nav-bar__link--bg:visited{
-        /* background: linear-gradient(180deg, #FB5A1E 12.9%, #FA8407 100%); */
-        background: #FB5A1E;
+        background: linear-gradient(180deg, #FB5A1E 12.9%, #FA8407 100%);
+        /* background: #FB5A1E; */
         box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.25);
         border-radius: 45px;
         padding: 7px 22px 10px;
