--- a/app/assets/styles/modules/_brands.css
+++ b/app/assets/styles/modules/_brands.css
@@ -1,8 +1,6 @@
 .brands{
-    background: rgba(255, 247, 245, 0.8);
+    background: rgba(255, 247, 245, 0.9);
     padding-bottom: 80px;
-
-
     
 
     &__container{
@@ -26,6 +24,10 @@
 
     &__title{
         margin: 8px 0 18px 0%;
+
+        &--link {
+            color: inherit;
+        }
     }
 
     &__img{
